@@ -27,8 +27,8 @@ from bzrlib.plugins.qbzr.lib.util import (
     file_extension,
     format_timestamp,
     get_qbzr_config,
-    get_global_config,
     get_monospace_font,
+    get_tab_width_pixels,
     )
 from bzrlib.trace import mutter
 from bzrlib.plugins.qbzr.lib.syntaxhighlighter import (
@@ -206,7 +206,6 @@ class SidebySideDiffView(QtGui.QSplitter):
         metadataFont.setPointSize(titleFont.pointSize() * 70 / 100)
         metadataLabelFont = QtGui.QFont(metadataFont)
         metadataLabelFont.setBold(True)
-        char_width = QtGui.QFontMetrics(self.monospacedFont).width(" ")
     
         self.monospacedFormat = QtGui.QTextCharFormat()
         self.monospacedFormat.setFont(self.monospacedFont)
@@ -226,12 +225,6 @@ class SidebySideDiffView(QtGui.QSplitter):
         self.browsers = (DiffSourceView(self),
                          DiffSourceView(self))
         self.cursors = [QtGui.QTextCursor(doc) for doc in self.docs]
-
-        bzr_config = get_global_config()
-        try:
-            tabWidth = int(bzr_config.get_user_option('tab_width'))
-        except TypeError:
-            tabWidth = 8
         
         for i, (browser, doc, cursor) in enumerate(zip(self.browsers, self.docs, self.cursors)):
             doc.setUndoRedoEnabled(False)
@@ -239,7 +232,7 @@ class SidebySideDiffView(QtGui.QSplitter):
             
             self.setCollapsible(i, False)
             browser.setDocument(doc)
-            browser.setTabStopWidth(tabWidth*char_width)
+            browser.setTabStopWidth(get_tab_width_pixels())
             self.addWidget(browser)
             
             format = QtGui.QTextCharFormat()
@@ -619,13 +612,7 @@ class SimpleDiffView(QtGui.QTextBrowser):
         self.monospacedHunkFormat.setFont(monospacedItalicFont)
         self.monospacedHunkFormat.setForeground(QtGui.QColor(153, 30, 199))
 
-        char_width = QtGui.QFontMetrics(monospacedFont).width(" ")
-        bzr_config = get_global_config()
-        try:
-            tabWidth = int(bzr_config.get_user_option('tab_width'))
-        except TypeError:
-            tabWidth = 8
-        self.setTabStopWidth(tabWidth*char_width)
+        self.setTabStopWidth(get_tab_width_pixels())
 
     def rewind(self):
         if not self.rewinded:
