@@ -1201,3 +1201,18 @@ def _get_monospace_font():
     font.setFixedPitch(True)
     return font
 
+
+def get_tab_width_chars():
+    """Function to get the tab width in characters from the configuration."""
+    bzr_config = get_global_config()
+    try:
+        tabWidth = int(bzr_config.get_user_option('tab_width'))
+    except TypeError:
+        tabWidth = 8
+    return tabWidth
+
+def get_tab_width_pixels():
+    """Function to get the tab width in pixels based on a monospaced font."""
+    monospacedFont = get_monospace_font()
+    char_width = QtGui.QFontMetrics(monospacedFont).width(" ")
+    return char_width*get_tab_width_chars()
